# voip_service

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  dev.env  sample.dev.env  setup.ps1
proto/: voip_service_grpc.proto
src/: cli_mode.rs  config.rs  debug_stats.rs  device_config.rs  logging.rs  main.rs  model.rs  perf_samples.rs  repl.rs  voip_service.rs  wav.rs  windows_service_mode.rs
src/pb/: voip.rs
