[package]
name = "voip_service"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.2"
cpal = "0.15.3"
env_logger = "0.11.5"
futures = "0.3.31"
livekit = {version = "0.6.0", features = ["native-tls"]}
log = "0.4.22"
prettytable-rs = "0.10.0"
prost = "0.13.3"
reqwest = "0.12.8"
rustyline = "14.0.0"
tokio = { version = "1.40.0", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
