[package]
name = "voip_service"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.2"
console-subscriber = { version = "0.4.1", optional = true }
cpal = "0.15.3"
ctrlc = "3.4.5"
env_logger = "0.11.5"
futures = "0.3.31"
livekit = { version = "0.6.0", features = ["native-tls"] }
log = "0.4.22"
minstant = "0.1.7"
prettytable-rs = "0.10.0"
prost = "0.13.3"
reqwest = "0.12.8"
ringbuf = "0.4.7"
tokio = { version = "1.40.0", features = [
        "full",
        "rt-multi-thread",
        "tracing",
] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
windows-service = { version = "0.7.0", optional = true }

[build-dependencies]
tonic-build = "0.12.3"


[features]
windows-background-service = ["windows-service"]
cli-mode = ["console-subscriber"]

[profile.release]
debug = true
